--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/runtime": "^7.4.5",
     "babel-loader": "^8.0.6",
+    "better-scroll": "^1.15.2",
     "del": "^4.1.1",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.2.0",
@@ -29,6 +30,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2"
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "query-string": "^6.5.0"
   }
 }
